--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "calculator",
+  "homepage": "https://lalitjain98.github.io/js-calculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
